added script to poll server from browser and update running analyses

--- a/framework/clients/ferrisweb/templates/base.tmpl
+++ b/framework/clients/ferrisweb/templates/base.tmpl
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="{{ request.META.HTTP_HOST }}/static/style.css" />
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
     <title>{% block title %}Viamics{% endblock %}</title>
 
 {% block meta %}
