--- a/framework/clients/ferrisweb/templates/index.tmpl
+++ b/framework/clients/ferrisweb/templates/index.tmpl
@@ -1,5 +1,8 @@
 {% extends "base.tmpl" %}
-
+{%block script%}
+<script src="/static/refresh.js" type="text/javascript">
+</script>
+{%endblock%}
 {% block title %}Viamics ({{analyses|length}} analys{{ analyses|length|pluralize:"is,es" }}){% endblock %}
 
 {% block content %}
@@ -15,11 +18,11 @@
 <table width="800">
 {% for analysis in analyses %}
     <tr>
-        <td width="30" valign="top" style="padding-top: 20px;"><img src="{{ request.META.HTTP_HOST }}/static/{{ analysis.state }}.gif"></td>
+        <td width="30" valign="top" style="padding-top: 20px;" ><img src="{{ request.META.HTTP_HOST }}/static/{{ analysis.state }}.gif" id="analysis_state_{{forloop.counter}}"></td>
         <td>
             <div class="smallheadindex" style="background: url(/static/{{ analysis.type }}.png) bottom right no-repeat;">{{ analysis.name }} {% ifequal analysis.state "done" %}<a href="./info/{{ analysis.id }}">»</a>{% endifequal %}</div>
-            <div class="smalltitle">id: {{ analysis.id }}</div>
-            <div class="logs">{% for log in analysis.log %}{{ log }}<br />{% endfor %}</div>
+            <div class="smalltitle">id: <span class="analysis_id">{{ analysis.id }}</span></div>
+            <div class="logs"><ul>{% for log in analysis.log %}<li>{{ log }}</li>{% endfor %}</ul></div>
         </td>
     </tr>
 {% endfor %}
