--- a/framework/clients/ferrisweb/static/style.css
+++ b/framework/clients/ferrisweb/static/style.css
@@ -20,7 +20,7 @@ h1 {
 	height:66px;
 	position:relative;
 	margin: 10;
-	border:1px solid #07060a;
+	/**border:1px solid #07060a;
 	background: -webkit-gradient(linear, 0 bottom, 0 top, from(#2a2833 ), to(#464451));
     background: -moz-linear-gradient(-90deg, #464451, #2a2833 );
 	-webkit-border-radius: 5px;
@@ -28,7 +28,7 @@ h1 {
     border-radius: 5px;
 	-webkit-box-shadow:inset 0 1px 0 #62616c, 0 0 6px #292739;
     -moz-box-shadow: inset 0 1px 0 #62616c, 0 0 6px #292739;
-    box-shadow: inset 0 1px 0 #62616c, 0 0 6px #292739;
+    box-shadow: inset 0 1px 0 #62616c, 0 0 6px #292739;**/
 }
 
 .item:hover h2 {
@@ -41,7 +41,7 @@ h1 {
 	position:absolute;
 	right:8px;
 	top:0px;
-	background:#413F4A;
+	/**background:#413F4A;**/
 	-webkit-border-radius: 13px;
     -moz-border-radius: 13px;
     border-radius: 13px;
@@ -54,13 +54,12 @@ h1 {
 .switcher li a {
 	font:13px/30px "BebasNeueRegular", Helvetica, Arial, sans-serif;
 	text-shadow: 0 -1px 0 #1b1929;
-	color:#aeabc9;
-	background:#5ad0ab;
+	color:#807367;
 	display:block;
 	padding:0 13px;
 	height:27px;
-	border:1px solid #201e27;
-	background: -webkit-gradient(linear, 0 bottom, 0 top, from(#33313e ), to(#514f5d));
+	border:1px solid #4d453f;
+	background: -webkit-gradient(linear, 0 bottom, 0 top, from(#b2a091 ), to(#ffe7d0));
 	background: -moz-linear-gradient(-90deg, #514f5d, #33313e ) ;
 	-webkit-box-shadow:inset 0 1px 0 #6B6974 ;
     -moz-box-shadow: inset 0 1px 0 #6B6974 ;
@@ -84,19 +83,15 @@ li:last-child a {
     border-radius:0 13px 13px 0;
 }
 
- li a:hover {
-	background: -webkit-gradient(linear, 0 bottom, 0 top, from(#383643 ), to(#6c6a78));
-	background: -moz-linear-gradient(-90deg, #6c6a78, #383643 ) ;
-}
 
 .switcher li.active a{
-	color:#fff;
-	text-shadow:0 1px 1px #000;
-	background: -webkit-gradient(linear, 0 bottom, 0 top, from(#3d3b47 ), to(#24222b));
-	background: -moz-linear-gradient(-90deg, #24222b, #3d3b47 ) ;
-	-webkit-box-shadow:inset 0 1px 1px #17161c ;
+	color:#000;
+	/*text-shadow:0 1px 1px #000;*/
+	background: -webkit-gradient(linear, 0 bottom, 0 top, from(#ffe7d0 ), to(#b2a091));
+/*	background: -moz-linear-gradient(-90deg, #24222b, #3d3b47 ) ;*/
+	-webkit-box-shadow:inset 0 1px 1px #6b6974 ;/*
     -moz-box-shadow: inset 0 1px 1px #17161c ;
-    box-shadow: inset 0 1px 1px #17161c ;
+    box-shadow: inset 0 1px 1px #17161c ;*/
 }
 
 /** /switcher styles **/
@@ -108,14 +103,14 @@ li:last-child a {
     width: 300px;
     float: left;
     padding: 2px;
-    background-color: #D7FFEA;
+    background-color: #BCE6E5;
     }
 
 #map-name {
     margin-left: 0;
     margin-right: auto;
     width: 283px;
-    background-color: #FFEAD7;
+    background-color: #BCE6E5;
     padding: 2px;
     text-align: center;
     }
@@ -150,7 +145,7 @@ li:last-child a {
 
 #map-file-input {
     float: left;
-     background-color: #D7FFEA;
+     background-color: #BCE6E5;
      margin: 5px;
      padding: 2px;
     }
