--- a/framework/clients/ferrisweb/templates/sample_map_form.tmpl
+++ b/framework/clients/ferrisweb/templates/sample_map_form.tmpl
@@ -1,3 +1,4 @@
+
 {% extends "base.tmpl" %}
 
 {% block title %}New Sample Map{% endblock %}
@@ -12,18 +13,37 @@
 <div class="form">
 <form enctype="multipart/form-data" method="post" action="{{ request.META.HTTP_HOST }}/create_sample_map/{{ analysis_id }}/{{ next_step }}">
 <table style="text-align: left;">
-<tr><td width="200"><label for="id_sample_map_name">Sample map name</label></td><td>: <input id="id_sample_map_name" size="10" type="text" name="sample_map_name" maxlength="30" length="30" /></td></tr>
+<tr><td width="200"><label for="id_sample_map_name">Sample map name</label></td><td>: <input id="id_sample_map_name" size="10" type="text" name="sample_map_name" maxlength="30" length="30" />
+
+</td></tr>
 </table>
-&nbsp;
-<table style="text-align: left;">
+
+<ul class="switcher">
+  <li class="active" onclick="swap('file_input','man_input');">Input manually</li>
+  <li onclick="swap('man_input','file_input');">Upload .csv file</li>
+</ul>
+<div id="file_input" class="input" style="display: none;">
+  <label for="id_metadata_file">Data file:</label><input type="file" name="metadata_file" id="id_metadata_file" /><br />
+  <input type="submit" value="Upload" />
+  <p class="info">Upload a .csv file containing the group information. For example, create a spreadsheet like this:<br /><img src="/static/spreadsheet.png" />  <br />and save as .csv</p>
+</div>
+
+<div class="input">
+<table style="text-align: left;" id="man_input">         
+
 {% for sample in samples %}
 
 <tr><td width="200"><label for="id_{{ sample }}">{{ sample }}</label></td><td>: <input id="id_{{ sample }}" size="10" type="text" name="{{ sample }}" maxlength="10" width="10" /></td></tr>
 
 {% endfor %}
+<tr><td colspan="2"><input type="submit" value="Next" /></td></tr>
+
 </table>
+</div>
 <br>
-<input type="submit" value="Next" />
+
 </form>
 </div>
+
+
 {% endblock %}
