--- a/framework/clients/ferrisweb/static/style.css
+++ b/framework/clients/ferrisweb/static/style.css
@@ -238,6 +238,30 @@ li.fancy:before {
        content: "» ";
    }
 
+table.resource_list {
+    float: left;
+    width: 60%;
+    }
+
+td.listed_resource_icon {
+    padding-top: 20px;
+    width: 30px;
+    valign: top;
+    }
+
+.add_resource_box {
+    float: left;
+    width: 30%;
+    }
+
+#file_upload_form h3 {
+    overflow: hidden;
+    }
+
+#file_upload_form img {
+    float: left;
+    margin:3px;
+    }
 li.notype{
     list-style-type: none;
 }
@@ -247,6 +271,11 @@ li {
     padding-bottom: 2px;
     font-size: 0.9em;
 }
+
+.secondary_control {
+    float: right;
+    padding-right: 20px;
+    }
 
 
 a {
