--- a/framework/clients/ferrisweb/templates/links.tmpl
+++ b/framework/clients/ferrisweb/templates/links.tmpl
@@ -1,1 +1,8 @@
-<a href="{{ request.META.HTTP_HOST }}/">Analyses</a> / <a href="{{ request.META.HTTP_HOST }}/new/rdp/">New Pyrosequencing Analysis</a> / <a href="{{ request.META.HTTP_HOST }}/new/qpcr/">New QPCR Analysis</a> / <a href="{{ request.META.HTTP_HOST }}/about/">About the Framework</a>
+<a href="{{ request.META.HTTP_HOST }}/">Analyses</a> /
+<a href="{{ request.META.HTTP_HOST }}/new/rdp/">New RDP Analysis</a> /
+<a href="{{ request.META.HTTP_HOST }}/new/blast/">New Blast Analysis</a> /
+<a href="{{ request.META.HTTP_HOST }}/new/qpcr/">New QPCR Analysis</a> /
+<a href="{{ request.META.HTTP_HOST }}/about/">About the Framework</a>
+<span class="secondary_control">
+  <a href="{{ request.META.HTTP_HOST }}/blastdb/">Manage BLAST databases</a>
+</span>
