--- a/framework/clients/ferrisweb/static/style.css
+++ b/framework/clients/ferrisweb/static/style.css
@@ -122,6 +122,11 @@ h1 {
     border-bottom: 1px solid #ADADAD;
 }
 
+.logs form label {
+    font-size: 12px;
+    color: #020202;
+    }
+
 .text {
     font-size: 0.8em;
     padding-left: 60px;
