--- a/framework/clients/ferrisweb/templates/blastdb.tmpl
+++ b/framework/clients/ferrisweb/templates/blastdb.tmpl
@@ -8,14 +8,18 @@ $(document).ready(function() {
 })
         function uploadDone() { //Function will be called when iframe is loaded
 	var ret = frames['upload_target'].document.getElementsByTagName("body")[0].innerHTML;
-        if( ret != ""){
-	    var data = JSON.parse(ret);
-            if(data.response == "OK") { //This part happens when the image gets uploaded.			
-                        alert('uploaded');
-	    }
-	    else { //Upload failed - show user the reason.
-		alert("upload failed");
-	    }
+        try{
+            if( ret != ""){
+	        var data = JSON.parse(ret);
+                if(data.response == "OK") { //This part happens when the image gets uploaded.			
+                            alert('uploaded');
+	        }
+	        else { //Upload failed - show user the reason.
+		    throw ret
+	        }
+            } 
+        } catch(err){
+            alert('upload failed: '+err.toString())
         }
 
 		
@@ -52,10 +56,19 @@ return function(data,textStatus,jqXHR)
         <td class="listed_resource_icon" ><img src="{{ request.META.HTTP_HOST }}/static/db.png" ></td>
         <td>
             <div class="smallheadindex" >{{  db.id }} <a href="/blastdb/{{ db.id }}">»</a></div>
-            <div class="smalltitle"><span class="analysis_id">{{ db.length }} sequences / <a href="#" onclick="alert('coming soon')">Append</a></span>
+            <div class="smalltitle"><span class="analysis_id">{{ db.length }} sequences   
 	    <span class="secondary_control">
 	      <a href="#" onclick="$.ajax({url:'/api/blastdb/{{ db.id }}/',type:'DELETE',success:delete_success('{{ db.id }}'),data:{_method:'DELETE'}})">Delete
 	    </span></div>
+	    <div class="logs">
+	      <form id="file_upload_form" method="post" enctype="multipart/form-data" action="/api/blastdb/{{ db.id }}/" target="upload_target" class="input" style="width: 75%;" > 
+	      <label for="file">Add sequences:</label>
+	      <input name="file" id="file" type="file" />
+	      <input type="hidden" name="file_type" id="file_type" value="fasta" />
+	      <input name="db_name" id="db_name" type="hidden" value={{ db.id }} />
+	      <input type="submit" name="action" value="Upload" />
+	    </form>
+	    </div>
         </td>
     </tr>
 {% endfor %}
@@ -71,7 +84,7 @@ return function(data,textStatus,jqXHR)
   <label for="db_name">DB Name:</label>
   <input name="db_name" id="db_name" type="text" /><br />
   <input type="submit" name="action" value="Upload" /><br />
-  <input type="hidden" name="file_type" id="db_name" value="fasta" />
+  <input type="hidden" name="file_type" id="file_type" value="fasta" />
  </form>
 
  <iframe id="upload_target" name="upload_target" src="" style="display:none"  onload="uploadDone()"></iframe> 
