fixed split fasta file view

--- a/framework/clients/ferrisweb/templates/info.tmpl
+++ b/framework/clients/ferrisweb/templates/info.tmpl
@@ -40,7 +40,7 @@
 	    <ul>
 	      <li><a href="{{ request.META.HTTP_HOST }}/media/{{ analysis.info.id }}/data_file">
 	      All sequences data file</a></li>
-	      <li><a href="{{ request.META.HTTP_HOST }}/media/{{ analysis.info.id }}/split_fasta">
+	      <li><a href="{{ request.META.HTTP_HOST }}/media/{{ analysis.info.id }}/split_fasta/">
 	      Sequences split by sample</a></li>
 	    </ul>
 	</li>
