--- a/framework/clients/ferrisweb/static/style.css
+++ b/framework/clients/ferrisweb/static/style.css
@@ -15,6 +15,22 @@ h1 {
     border-bottom: 1px solid #ADADAD;
 }
 
+.connected {
+    border-left-color: #FACFCF;
+    border-left-style: dashed;
+    border-left-width: 2px;
+    padding-left: 3px;
+}
+
+.errorlist li, .error_field {
+    background-color: #FF9999;
+    
+}
+
+.errorlist li {
+    display: inline;
+}
+
 .switcher li.active {
     background-color: #E6CEBB;
     }
