--- a/framework/clients/ferrisweb/templates/about.tmpl
+++ b/framework/clients/ferrisweb/templates/about.tmpl
@@ -21,7 +21,7 @@
     <li class="feedback">The sequence headers in this fasta file are relevant. <br />
       When fasta files (e.g. pyrosequencing results) are BLASTed against the database you are uploading, sequences in the file will be classified according to the header of the sequence they aligned with. There are currently two supported formats for these headers:
       <p>ID only - e.g. "&gt;145928". Each sequence in the DB has a unique id in this format. Query sequences will be given the label of the sequence they are aligned with. </p>
-      <p>Additional info - e.g. "&gt;5524211|gb|AAD44166.1| cytochrome b |Elephas maximus maximus". If the header of a sequence in the database contains a pipe (|) character, it will be split into sections at each pipe and query sequences that align with it will be labeled according to the last section. E.g. query sequences that match a reference sequence with the above header will be labeled "Elephas maximus maximus". The first section should still be a uniqe id for every reference sequence</p>
+      <p>Additional info - e.g. "&gt;5524211|gb|AAD44166.1|Elephas maximus|Elephas maximus maximus". If the header of a sequence in the database contains a pipe (|) character, it will be split into sections at each pipe and query sequences that align with it will be labeled according to the fourth section. E.g. query sequences that match a reference sequence with the above header will be labeled "Elephas maximus". The first section should still be a uniqe id for every reference sequence. This format is used because it's how the file we already have is arranged. <br />If you have a file in some other format, don't go through and change every line of it, let me (johnnybrown7@gmail.com) know and I'll fix viamics to handle the format you have.</p>
     </li>
     <li class="step">After selecting a file, click the "upload" button to add your database. </li>
     <li class="feedback">If the database creation succeeds, a popup window will appear with the message "uploaded", and after clicking OK the name you provided will appear in the list of databases</li>
@@ -38,13 +38,9 @@
   </ul>
 
   <h2>Strip barcodes/primers, and split fasta file by sample</h2>
-  <ul>
-    <li class="step">Open the <a href="{{ request.META.HTTP_HOST }}/stripsplit/">split/strip webapp</a></li>
-    <li class="step">Select the two files two upload. </li>
-    <li class="feedback">The keys file is the .txt file that comes with the pyrosequencing data. It has four columns, (#SampleID, BarcodeSequence, LinkerPrimerSequence, Description) and may have the word "mapping" in its name. Fasta is the file containing the sequences.</li>
-    <li class="step">Click "submit".</li>
-    <li class="feedback">Your browser should download a zip file containing one fasta file for each sample, with primers and barcodes stripped.</li>
-  </ul>
+  <li class="feedback">
+    <p>this is now incorporated into the upload step. Please send any questions or anything that's unclear</p>
+  </li>
 
 <p>Please don't hesitate to send your questions, feature requests or bug reports to a.murat.eren@gmail.com, or johnnybrown7@gmail.com.</p>
 </div>
